--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css">
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>템플릿 페이지</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link href="./src/index.scss" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
